@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+ 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+ 
   <modelVersion>4.0.0</modelVersion>
-
+ 
   <groupId>dam.mod</groupId>
   <artifactId>CentroPlus-Connect</artifactId>
   <version>1.0-SNAPSHOT</version>
-
+ 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <mockito.version>5.12.0</mockito.version>
-
-    <!-- JAVA FX VERSION -->
     <javafx.version>17.0.2</javafx.version>
   </properties>
-
+ 
   <dependencies>
-
+ 
     <!-- JUNIT -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -29,34 +27,35 @@
       <version>5.12.0</version>
       <scope>test</scope>
     </dependency>
-
+ 
     <!-- SQLITE -->
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.46.0.0</version>
     </dependency>
-
-
+ 
     <!-- JAVA FX -->
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
       <version>${javafx.version}</version>
     </dependency>
-
+ 
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
       <version>${javafx.version}</version>
     </dependency>
-
+ 
+    <!-- BCRYPT -->
     <dependency>
       <groupId>org.mindrot</groupId>
       <artifactId>jbcrypt</artifactId>
       <version>0.4</version>
     </dependency>
-
+ 
+    <!-- MOCKITO -->
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
@@ -71,60 +70,49 @@
     </dependency>
 
     <dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-databind</artifactId>
-    <version>2.20.0</version>
+    <groupId>org.testfx</groupId>
+    <artifactId>openjfx-monocle</artifactId>
+    <version>jdk-12.0.1+2</version>
+    <scope>test</scope>
 </dependency>
-
+ 
   </dependencies>
-
+ 
   <build>
     <plugins>
-      <!-- JaCOCO-->
+ 
+      <!-- JaCoCo -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.8.12</version>
-        <configuration>
-          <excludes>
-            <exclude>dam/mod/controllers/**</exclude>
-          </excludes>
-        </configuration>
         <executions>
-
-          <!-- Activa JaCoCo -->
           <execution>
             <goals>
               <goal>prepare-agent</goal>
             </goals>
           </execution>
-
-          <!-- Genera el reporte -->
           <execution>
             <id>report</id>
             <phase>test</phase>
-
             <goals>
               <goal>report</goal>
             </goals>
           </execution>
-
         </executions>
-
       </plugin>
-
+ 
       <!-- COMPILER -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
-
         <configuration>
           <source>17</source>
           <target>17</target>
         </configuration>
       </plugin>
-
+ 
       <!-- JAVA FX RUN -->
       <plugin>
         <groupId>org.openjfx</groupId>
@@ -134,14 +122,36 @@
           <mainClass>dam.mod.Main</mainClass>
         </configuration>
       </plugin>
-
+ 
+      <!-- SUREFIRE -->
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.5</version>
-      </plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.2.5</version>
 
+    <configuration>
+
+        <argLine>
+            @{argLine}
+
+            -Djava.awt.headless=true
+            -Dtestfx.robot=glass
+            -Dtestfx.headless=true
+            -Dprism.order=sw
+            -Dprism.text=t2k
+            -Dglass.platform=Monocle
+            -Dmonocle.platform=Headless
+
+            --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+            --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+            --add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED
+
+        </argLine>
+
+    </configuration>
+</plugin>
+ 
     </plugins>
   </build>
-
+ 
 </project>
